tests: Fixing JBR compatibility